--- a/transtats/dashboard/templates/login.html
+++ b/transtats/dashboard/templates/login.html
@@ -5,5 +5,5 @@
     <div class="form-group">
       <input type="password" placeholder="Password" class="form-control">
     </div>
-    <button type="submit" class="btn btn-success">Sign in</button>
+    <button type="submit" class="btn btn-success disabled">Sign in</button>
 </form>
