--- a/transtats/dashboard/templates/settings/settings_base.html
+++ b/transtats/dashboard/templates/settings/settings_base.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
 
 {% block pagebanner %}
-    <div style="padding:20px">
-      <div class="container well well-lg">
-        <h2>App Settings</h2>
-      </div>
+    <div class="page-header">
+      <h1>App Settings <small>inventory and configuration</small></h1>
     </div>
 {% endblock %}
 
