--- a/transtats/dashboard/templates/home.html
+++ b/transtats/dashboard/templates/home.html
@@ -1,15 +1,16 @@
 {% extends "base.html" %}
 
 {% block pagebanner %}
-    <div style="padding:20px">
-      <div class="container well well-lg">
-        <p style="font-size:large;">{{ description }}</p>
-      </div>
+    <div class="page-header">
+      <h1>About <small>{{ description }}</small></h1>
     </div>
 {% endblock %}
 
+{% block navigation %}
+    <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-home"></i></a>
+    <div class="btn btn-default disabled">Dashboard</div>
+{% endblock %}
+
 {% block pagecontent %}
-<div style="padding-left:200px">
-    {% include "summary.html" %}
-</div>
+    <h4 style="color-grey">Some charts and graphs.</h4>
 {% endblock %}
