--- a/transtats/dashboard/templates/settings/summary.html
+++ b/transtats/dashboard/templates/settings/summary.html
@@ -8,6 +8,12 @@
 </script>
 {% endblock %}
 
+{% block navigation %}
+    <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-home"></i></a>
+    <a href="{% url 'settings' %}" class="btn btn-default">Settings</a>
+    <div class="btn btn-default disabled">Summary</div>
+{% endblock %}
+
 {% block tabcontent %}
 <h5>This section would summarise settings current state!!</h5>
 {% endblock %}
