--- a/transtats/dashboard/templates/settings/settings_base.html
+++ b/transtats/dashboard/templates/settings/settings_base.html
@@ -19,7 +19,6 @@
 {% endblock %}
 
 {% block pagecontent %}
-<div class="container">
     <ul class="nav nav-tabs">
       <li id="tab-summary" role="presentation"><a href="{% url 'settings' %}">Summary</a></li>
       <li id="tab-languages" role="presentation"><a href="{% url 'settings-languages' %}">Languages</a></li>
@@ -29,9 +28,9 @@
       <li id="tab-scheduler" role="presentation"><a href="{% url 'settings-scheduler' %}">Scheduler</a></li>
       <li id="tab-notification" role="presentation"><a href="{% url 'settings-notification' %}">Notification</a></li>
       <li id="tab-stats-view" role="presentation"><a href="{% url 'settings-stats-views' %}">Statistics Views</a></li>
+      <li id="tab-logs" role="presentation"><a href="{% url 'settings-logs' %}">Logs</a></li>
     </ul>
     <div style="padding:20px">
         {% block tabcontent %}{% endblock %}
-    </div>
 </div>
 {% endblock %}
