--- a/transtats/dashboard/templates/settings/packages.html
+++ b/transtats/dashboard/templates/settings/packages.html
@@ -1,5 +1,5 @@
 {% extends "settings/settings_base.html" %}
-
+{% load crispy_forms_tags %}
 
 {% block extrascript %}
 <script src="/static/js/jquery-1.12.3.js"></script>
@@ -9,7 +9,11 @@
     $(document).ready(function() {
         $('#tab-packages').addClass('active');
         $('#packages-table').DataTable();
+        $(".alert-dismissable").click(function (e) {
+            $(this).fadeOut('slow');
+        });
     })
+
 </script>
 {% endblock %}
 
@@ -26,11 +30,17 @@
             <span class="badge">{{ packages|length }}</span> packages registered.
         </span>
         <div class="pull-right">
-            <button type="button" class="btn btn-default disabled">Add Package</button>
+            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#newPackage">Add Package</button>
         </div>
     </div>
 </div>
 <hr/>
+{% for message in messages %}
+    <div class="alert alert-danger alert-dismissable">
+      <button type="button" class="close" aria-hidden="true">&times;</button>
+      <p>{{ message }}</p>
+    </div>
+{% endfor %}
 <div id="settings-package-content">
     <table id="packages-table" class="table table-hover table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -73,14 +83,34 @@
                 <td>{{ package.lang_set }}</td>
                 <td>{{ package.transtats_lastupdated }}</td>
                 <td align="center">
-                  <a class="btn btn-default btn-small"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                  <a class="btn btn-default btn-small disabled"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
                 </td>
                 <td align="center">
-                  <a class="btn btn-danger btn-small"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                  <a class="btn btn-danger btn-small disabled"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
                 </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
+
+<!-- Modal -->
+<div id="newPackage" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">New Package</h4>
+      </div>
+      <div class="modal-body">
+        <p>{% crispy form %}</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 {% endblock %}
