--- a/transtats/dashboard/templates/settings/transplatforms.html
+++ b/transtats/dashboard/templates/settings/transplatforms.html
@@ -48,12 +48,12 @@
             <p><a href="{{ platform.api_url }}" target="_blank">{{ platform.api_url }}</a>
                 <span class="glyphicon glyphicon-link" aria-hidden="true"></span></p>
             <p>
-                <a href="#" class="btn btn-default btn-small" role="button">Edit URL</a>
+                <a href="#" class="btn btn-default btn-small disabled" role="button">Edit URL</a>
                 {% if platform.server_status == 'active' %}
-                    <a href="#" class="btn btn-default btn-small" role="button">Deactivate</a>
+                    <a href="#" class="btn btn-default btn-small disabled" role="button">Deactivate</a>
                 {% else %}
-                    <a href="#" class="btn btn-default btn-small" role="button">Activate</a>
-                    <a class="btn btn-danger btn-small">
+                    <a href="#" class="btn btn-default btn-small disabled" role="button">Activate</a>
+                    <a class="btn btn-danger btn-small disabled">
                         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                     </a>
                 {% endif %}
