enable stats sync
fix models

--- a/transtats/dashboard/templates/settings/languages.html
+++ b/transtats/dashboard/templates/settings/languages.html
@@ -77,7 +77,7 @@
                     <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
                 {% endif %}
             </td>
-            <td>{% if lang.lang_status == 'active' %}
+            <td>{% if lang.lang_status %}
                     <input type="checkbox" checked data-toggle="toggle">
                 {% else %}
                     <input type="checkbox" data-toggle="toggle">
