--- a/transtats/dashboard/templates/settings/release_streams.html
+++ b/transtats/dashboard/templates/settings/release_streams.html
@@ -33,7 +33,7 @@
         <div class="thumbnail">
           <div class="caption">
             <h3>{{ relstream.relstream_name }} <small>{{ relstream.relstream_built }}</small>
-                {% if relstream.relstream_status == 'active' %}
+                {% if relstream.relstream_status %}
                     <span class="glyphicon glyphicon-ok-circle" style="color:green"></span>
                 {% else %}
                     <span class="glyphicon glyphicon-ban-circle" style="color:orange"></span>
@@ -56,7 +56,7 @@
             </p>
             <p>
                 <a href="#" class="btn btn-default btn-small disabled" role="button">Edit</a>
-                {% if relstream.relstream_status == 'active' %}
+                {% if relstream.relstream_status %}
                     <a href="#" class="btn btn-default btn-small disabled" role="button">Deactivate</a>
                 {% else %}
                     <a href="#" class="btn btn-default btn-small disabled" role="button">Activate</a>
