--- a/transtats/dashboard/templates/settings/transplatforms.html
+++ b/transtats/dashboard/templates/settings/transplatforms.html
@@ -40,7 +40,7 @@
         <div class="thumbnail">
           <div class="caption">
             <h3>{{ platform.engine_name|capfirst }} <small>{{ platform.subject }}</small>
-                {% if platform.server_status == 'active' %}
+                {% if platform.server_status %}
                     <span class="glyphicon glyphicon-ok-circle" style="color:green"></span>
                 {% else %}
                     <span class="glyphicon glyphicon-ban-circle" style="color:orange"></span>
@@ -49,7 +49,7 @@
                 <span class="glyphicon glyphicon-link" aria-hidden="true"></span></p>
             <p>
                 <a href="#" class="btn btn-default btn-small disabled" role="button">Edit URL</a>
-                {% if platform.server_status == 'active' %}
+                {% if platform.server_status %}
                     <a href="#" class="btn btn-default btn-small disabled" role="button">Deactivate</a>
                 {% else %}
                     <a href="#" class="btn btn-default btn-small disabled" role="button">Activate</a>
