--- a/transtats/dashboard/templates/settings/scheduler.html
+++ b/transtats/dashboard/templates/settings/scheduler.html
@@ -36,15 +36,25 @@
     $(document).ready(function() {
         $('#tab-scheduler').addClass('active');
         $("#syncform").submit(function(event){
+
+            // save button to use it later
+            var submit_button = $(this).find("button");
+
+            // give button loading state
+            submit_button.button('loading');
+
             $.ajax({
                  type:"POST",
                  url:"/ajax/schedule-job",
                  data: {
-                        'job': $('#identifier').val() // from form
-                        },
+                    // jon identification
+                    'job': $('#identifier').val()
+                 },
                  success: function(response){
-                     $('#message').html(response)
-                 }
+                    $('#message').html(response);
+                    //reset state
+                    submit_button.button('reset');
+                 },
             });
             return false; //<---- move it here
        });
@@ -75,7 +85,7 @@
     <h3 class="panel-title">Sync Translation Platform</h3>
   </div>
   <div class="panel-body">
-    Update projects and their details
+    Update project details
     <select class="selectpicker" data-width="150px">
       <option>Daily</option>
       <option>Twice a week</option>
@@ -94,7 +104,8 @@
     hour(s).<hr/>
     <form method="post" id ="syncform" class="form-horizontal">{% csrf_token %}
         <input type="hidden" value="synctransplatform" id="identifier"/>
-        <button type="submit" class="btn btn-default">Run Now</button>
+        <button type="submit" data-loading-text="Syncing..." class="btn btn-default"
+                autocomplete="off">Run Now</button>
         <span id="message">&nbsp;&nbsp;This would initiate a sync job to update:
             <span class="text-info"> project details and stats of registered packages.</span></span>
     </form>
