--- a/transtats/dashboard/templates/settings/logs.html
+++ b/transtats/dashboard/templates/settings/logs.html
@@ -15,5 +15,56 @@
 {% endblock %}
 
 {% block tabcontent %}
-<h5>This section would include logs around trans-sync and validation jobs!!</h5>
+<div class="row">
+    <div class="col-xs-12">
+        <span>
+            <span class="badge">{{ logs|length }}</span> jobs ran.
+        </span>
+        <span class="pull-right">
+            <button type="button" class="btn btn-default disabled">Archive Logs</button>
+        </span>
+    </div>
+</div>
+<hr/>
+<div class="panel-group" id="accordion">
+    {% for log in logs %}
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    {{ log.job_start_time|date }}&nbsp;&nbsp;&nbsp;
+                    <a data-toggle="collapse" data-parent="#accordion" href="#{{ log.job_uuid }}">
+                        <span style="color:grey">Job#</span> {{ log.job_uuid }}
+                    </a>&nbsp;&nbsp;&nbsp;
+                    <span style="color:grey">Type#</span> {{ log.job_type|title }}
+                    <span class="pull-right">
+                        {% if log.job_result %}
+                            <span class="text-success">Succeed</span>
+                        {% else %}<span class="text-danger">Failed</span>{% endif %}
+                    </span>
+                </h4>
+            </div>
+            <div id="{{ log.job_uuid }}" class="panel-collapse collapse {% if forloop.counter == 1 %}in{% endif %}">
+                <div class="panel-body">
+                    <p><span class="glyphicon glyphicon-time" aria-hidden="true"></span><span class="text-info">
+                        {% if log.job_start_time %}Started at <strong>{{ log.job_start_time|time:"H:i:s" }}</strong>{% endif %}
+                        {% if log.job_end_time %} and completed at <strong>{{ log.job_end_time|time:"H:i:s" }}{% endif %}</strong>
+                    </span></p>
+                    <hr/>
+                    <p>
+                        <div class="list-group">
+                            {% for task, details in log.job_log_json.items %}
+                            <a href="#" class="list-group-item">
+                              <h4 class="list-group-item-heading">{{ task }}</h4>
+                                {% for datetime, event in details.items %}
+                                    <p class="list-group-item-text"><strong>{{ datetime|truncatechars:22 }}&nbsp;&nbsp;&nbsp;</strong>{{ event }}</p>
+                                {% endfor %}
+                            </a>
+                            {% endfor %}
+                        </div>
+                    </p>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
+</div>
 {% endblock %}
