--- a/transtats/dashboard/templates/settings/transplatforms.html
+++ b/transtats/dashboard/templates/settings/transplatforms.html
@@ -50,7 +50,8 @@
                 <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
             </p>
             {% if platform.projects_lastupdated %}
-            <p><span style="color:grey">Last updated</span> {{ platform.projects_lastupdated|timesince }} ago.
+            <p><span style="color:grey">Last updated</span> {{ platform.projects_lastupdated|timesince }}
+                <span style="color:grey">ago</span>.
                 <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
             </p>
             {% endif %}
