--- a/transtats/dashboard/templates/settings/scheduler.html
+++ b/transtats/dashboard/templates/settings/scheduler.html
@@ -1,38 +1,8 @@
 {% extends "settings/settings_base.html" %}
 
 {% block extrascript %}
+<script src="/static/js/transtats.js"></script>
 <script type="text/javascript">
-    function getCookie(name) {
-        var cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            var cookies = document.cookie.split(';');
-            for (var i = 0; i < cookies.length; i++) {
-                var cookie = jQuery.trim(cookies[i]);
-                // Does this cookie string begin with the name we want?
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
-        }
-        return cookieValue;
-    }
-
-    var csrftoken = getCookie('csrftoken');
-
-    function csrfSafeMethod(method) {
-        // these HTTP methods do not require CSRF protection
-        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-    }
-
-    $.ajaxSetup({
-        beforeSend: function(xhr, settings) {
-            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                xhr.setRequestHeader("X-CSRFToken", csrftoken);
-            }
-        }
-    });
-
     $(document).ready(function() {
         $('#tab-scheduler').addClass('active');
         $("#syncform").submit(function(event){
@@ -47,7 +17,7 @@
                  type:"POST",
                  url:"/ajax/schedule-job",
                  data: {
-                    // jon identification
+                    // job identification
                     'job': $('#identifier').val()
                  },
                  success: function(response){
