--- a/transtats/dashboard/templates/home.html
+++ b/transtats/dashboard/templates/home.html
@@ -70,7 +70,8 @@ $(document).ready(function () {
                         axisLabelPadding: 3,
                         tickFormatter: function (v, axis) {
                             return v + "%";
-                        }
+                        },
+                        tickDecimals: 2,
                     },
                     legend: {
                         noColumns: 0,
