--- a/transtats/dashboard/templates/base.html
+++ b/transtats/dashboard/templates/base.html
@@ -69,9 +69,10 @@
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{% url 'features' %}">Features</a></li>
                 <li><a href="{% url 'settings' %}">Settings</a></li>
-                <li class="active"><a href="{% url 'register' %}" role="button">Sign Up &raquo;</a></li>
+                <!--<li class="active"><a href="{% url 'register' %}" role="button">Sign Up &raquo;</a></li>-->
+                <li class="active"><a href="#" role="button">Login &raquo;</a></li>
               </ul>
-              {% include "login.html" %}
+              <!--{% include "login.html" %}-->
             </div><!--/.navbar-collapse -->
           </div>
         </nav>
