--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -117,7 +117,7 @@ $(document).ready(function () {
       <li id="tab-graph-default" role="presentation" class="active">
           <a href="{% url 'home' %}">Package wise for enabled languages</a>
       </li>
-      <li id="tab-graph-custom" role="presentation"><a href="#">Custom Views</a></li>
+      <li id="tab-graph-custom" role="presentation"><a href="#">Based on Graph Rules</a></li>
     </ul>
     <div style="padding:20px">
         <div class="row" style="padding-bottom:20px">
