--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -67,6 +67,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
+                <li><a href="http://transtats.readthedocs.io/en/latest/" target="_blank">Docs</a></li>
                 <li><a href="{% url 'features' %}">Features</a></li>
                 <li><a href="{% url 'settings' %}">Settings</a></li>
                 <!--<li class="active"><a href="{% url 'register' %}" role="button">Sign Up &raquo;</a></li>-->
