--- a/dashboard/templates/settings/settings_base.html
+++ b/dashboard/templates/settings/settings_base.html
@@ -25,10 +25,10 @@
       <li id="tab-trans-platforms" role="presentation"><a href="{% url 'settings-trans-platforms' %}">Translation Platforms</a></li>
       <li id="tab-release-streams" role="presentation"><a href="{% url 'settings-release-streams' %}">Release Streams</a></li>
       <li id="tab-packages" role="presentation"><a href="{% url 'settings-packages' %}">Packages</a></li>
-      <li id="tab-scheduler" role="presentation"><a href="{% url 'settings-scheduler' %}">Scheduler</a></li>
-      <li id="tab-logs" role="presentation"><a href="{% url 'settings-logs' %}">Logs</a></li>
-      <li id="tab-stats-view" role="presentation"><a href="{% url 'settings-stats-views' %}">Stats Views</a></li>
+      <li id="tab-jobs" role="presentation"><a href="{% url 'settings-jobs' %}">Jobs</a></li>
       <li id="tab-notification" role="presentation"><a href="{% url 'settings-notification' %}">Notification</a></li>
+      <li id="tab-graph-rules" role="presentation"><a href="{% url 'settings-graph-rules' %}">Graph Rules</a></li>
+      <li id="tab-logs" role="presentation"><a href="{% url 'settings-logs' %}">Logs</a></li>
     </ul>
     <div style="padding:20px">
         {% block tabcontent %}{% endblock %}
